Bootstrap files installed

--- a/index.html
+++ b/index.html
@@ -7,9 +7,19 @@
 	<link rel="icon" type="image/png" href="favicons/favicon-16x16.png" sizes="16x16">
 	<link rel="manifest" href="favicons/manifest.json">
 	<link rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#5bbad5">
+	<link rel="stylesheet" href="css/animsition.min.css">
+	<link rel="stylesheet" href="css/bootstrap.css">
+	<link rel="stylesheet" href="css/magnific-popup.css">
+	<link rel="stylesheet" href="css/animate.css">
 	<meta name="theme-color" content="#ffffff">
 </head>
 <body>
 <div id="root"></div></body>
 <script src="app/assets/javascripts/bundle.js"></script>
+<script src="app/assets/javascripts/jquery-2.1.1.min.js"></script>
+<script src="app/assets/javascripts/animsition.min.js"></script>
+<script src="app/assets/javascripts/bootstrap.min.js"></script>
+<script src="app/assets/javascripts/isotope.pkgd.js"></script>
+<script src="app/assets/javascripts/masonry-horizontal.js"></script>
+
 </html>
