--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 	<link rel="stylesheet" href="css/magnific-popup.css">
 	<link rel="stylesheet" href="css/animate.css">
 	<meta name="theme-color" content="#ffffff">
+	<style type="text/css">
+		a{text-decoration: none !important; }
+	</style>
 </head>
 <body>
 <div id="root"></div></body>
