Wrap li in Link instead of the other way around

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 	<link rel="stylesheet" href="css/animate.css">
 	<meta name="theme-color" content="#ffffff">
 	<style type="text/css">
-		a{text-decoration: none !important; }
+		a{text-decoration: none !important;
+			color: inherit; }
 	</style>
 </head>
 <body>
