Portfolio styled, transitions added

--- a/index.html
+++ b/index.html
@@ -17,12 +17,15 @@
 			color: inherit; }
 	</style>
 </head>
-<body>
+<body class="animsition">
 <div id="root"></div></body>
-<script src="app/assets/javascripts/bundle.js"></script>
 <script src="app/assets/javascripts/jquery-2.1.1.min.js"></script>
 <script src="app/assets/javascripts/animsition.min.js"></script>
+<script src="app/assets/javascripts/bundle.js"></script>
 <script src="app/assets/javascripts/bootstrap.min.js"></script>
+<script src="app/assets/javascripts/jquery.magnific-popup.min.js"></script>
+<script src="app/assets/javascripts/main.js"></script>
+<script src="app/assets/javascripts/imagesloaded.pkgd.min.js"></script>
 <script src="app/assets/javascripts/isotope.pkgd.js"></script>
 <script src="app/assets/javascripts/masonry-horizontal.js"></script>
 
