Copy lightbox files

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/magnific-popup.css">
 	<link rel="stylesheet" href="css/animate.css">
-	<link href="node_modules/lightbox2/src/css/lightbox.css" rel="stylesheet">
+	<link href="css/lightbox.css" rel="stylesheet">
 	<meta name="theme-color" content="#ffffff">
 	<style type="text/css">
 		a{text-decoration: none !important;
@@ -21,7 +21,7 @@
 <body class="animsition">
 <div id="root"></div></body>
 <script src="app/assets/javascripts/jquery-2.1.1.min.js"></script>
-<script src="node_modules/lightbox2/src/js/lightbox.js"></script>
+<script src="app/assets/javascripts/lightbox.js"></script>
 <script src="app/assets/javascripts/animsition.min.js"></script>
 <script src="app/assets/javascripts/bundle.js"></script>
 <script src="app/assets/javascripts/bootstrap.min.js"></script>
