--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			color: inherit; }
 	</style>
 </head>
-<body>
+<body class="animsition">
 <div id="root"></div></body>
 <script src="app/assets/javascripts/jquery-2.1.1.min.js"></script>
 <script src="app/assets/javascripts/lightbox.js"></script>
