--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
 	<link rel="icon" type="image/png" href="favicons/favicon-32x32.png" sizes="32x32">
 	<link rel="icon" type="image/png" href="favicons/favicon-16x16.png" sizes="16x16">
-	<link href="fonts.googleapis.com/css?family=Montserrat:300, 400,500,700,900|Raleway:300,400,500,700,900" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:300, 400,500,700,900|Raleway:300,400,500,700,900" rel="stylesheet">
 	<link rel="manifest" href="favicons/manifest.json">
 	<link rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#5bbad5">
 	<link rel="stylesheet" href="css/animsition.min.css">
