--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Medina Tree Services</title>
+	<meta name = "viewport" id = "viewport_device">
 	<link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
 	<link rel="icon" type="image/png" href="favicons/favicon-32x32.png" sizes="32x32">
 	<link rel="icon" type="image/png" href="favicons/favicon-16x16.png" sizes="16x16">
@@ -22,6 +23,7 @@
 <body class="animsition">
 <div id="root"></div></body>
 <script src="app/assets/javascripts/jquery-2.1.1.min.js"></script>
+
 <script src="app/assets/javascripts/lightbox.js"></script>
 <script src="app/assets/javascripts/animsition.min.js"></script>
 <script src="app/assets/javascripts/bundle.js"></script>
