--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
 <head>
 	<title>Medina Tree Services</title>
-	<meta name = "viewport" id = "viewport_device">
-	<link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">	<link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
 	<link rel="icon" type="image/png" href="favicons/favicon-32x32.png" sizes="32x32">
 	<link rel="icon" type="image/png" href="favicons/favicon-16x16.png" sizes="16x16">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300, 400,500,700,900|Raleway:300,400,500,700,900" rel="stylesheet">
