--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<link rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#5bbad5">
 	<link rel="stylesheet" href="css/animsition.min.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="css/owl.carousel.css">
 	<link rel="stylesheet" href="css/magnific-popup.css">
 	<link rel="stylesheet" href="css/animate.css">
 	<link href="css/lightbox.css" rel="stylesheet">
@@ -22,8 +23,8 @@
 <body class="animsition">
 <div id="root"></div></body>
 <script src="app/assets/javascripts/jquery-2.1.1.min.js"></script>
-
 <script src="app/assets/javascripts/lightbox.js"></script>
+<script src="app/assets/javascripts/owl.carousel.min.js"></script>
 <script src="app/assets/javascripts/animsition.min.js"></script>
 <script src="app/assets/javascripts/bundle.js"></script>
 <script src="app/assets/javascripts/bootstrap.min.js"></script>
