--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Medina Tree Services</title>
+	<title>Medina Tree Service</title>
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="description" content="A family owned and operated full service tree care corporation serving Eastern Massachusetts. We have over 15 years of experience and are fully licensed. If you are searching for a tree service company that is affordable and professional, please give us a call.">
 <meta name="keywords" content="trees, tree removal, snow removal, landscaping, planting, mass, crane services, boston, Massachusetts,">	<link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
